--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,48 +1,72 @@
 <footer>
-        <div class="footer">
-            <div class="footer-little">
-                <img src="{{asset('assets/uploads/logofina.svg')}}" alt="Logo Sandraya">
-                <p>L’univers unique de l’artisanat créatif où la tradition rencontre l’originalité. Chaque création est réalisée avec soin et passion, alliant la finesse du travail à point de croix à la modernité et la durabilité de la résine. </p>
-            </div>
-            <div class="footer-little">
-                <h3>Boutique</h3>
-                <ul>
-                    <li><a href="">Pendentif</a></li>
-                    <li><a href="">Signalibre</a></li>
-                    <li><a href="">Quadre</a></li>
-            </div>
-            <div class="footer-little">
-                <h3>Aide & Support</h3>
-                <ul>
-                    <li><a href="">FAQ</a></li>
-                    <li><a href="">Politique d'expedition</a></li>
-                    <li><a href="">Retours & remboursement</a></li>
-                    <li><a href="">Suivi de commande</a></li>
-                </div>
-            <div class="footer-little">
-                <h3>Legal</h3>
-                <ul>
-                    <li><a href="">Mention légales</a></li>
-                    <li><a href="">CGV</a></li>
-                    <li><a href="">RGPD</a></li>
-                    <li><a href="">Politique de cookies</a></li>
-                    <li><a href="">Condition d'utilisation du site</a></li>
-                </ul>
-            </div>
-            <div class="footer-little">
-                <h3 class="hide">Contact</h3>
-                <ul class="hide">
-                    <li><a href="">Email</a></li>
-                    <li><a href="">Portable</a></li>
-                    <li><a href="">Instagram</a></li>
-                    <li><a href="">TikTok</a></li>
-                </ul>
-            </div>
-        </div>
-        <p>2025 Sandraya - creations en point de croix. Tous droits reservée. </p>
-    </footer>
-<script src="https://kit.fontawesome.com/88c7dae6e1.js" crossorigin="anonymous"></script>
-<script src="{{asset("assets/js/structure.js")}}"></script>
-<script src="{{asset('assets/js/stitch-engine.js')}}"></script>
-	<script src="{{asset('assets/js/stitch-letter.js')}}"></script>
-	<script src="{{asset('assets/js/stitch-title.js')}}"></script>
+	<div class="footer">
+		<div class="footer-little">
+			<img src="{{asset('assets/uploads/logofina.svg')}}" alt="Logo Sandraya">
+			<p>L’univers unique de l’artisanat créatif où la tradition rencontre l’originalité. Chaque création est réalisée avec soin et passion, alliant la finesse du travail à point de croix à la modernité et la durabilité de la résine.
+			</p>
+		</div>
+		<div class="footer-little">
+			<h3>Boutique</h3>
+			<ul>
+				<li>
+					<a href="">Pendentif</a>
+				</li>
+				<li>
+					<a href="">Signalibre</a>
+				</li>
+				<li>
+					<a href="">Quadre</a>
+				</li>
+			</div>
+			<div class="footer-little">
+				<h3>Aide & Support</h3>
+				<ul>
+					<li>
+						<a href="">FAQ</a>
+					</li>
+					<li>
+						<a href="">Politique d'expedition</a>
+					</li>
+					<li>
+						<a href="">Retours & remboursement</a>
+					</li>
+					<li>
+						<a href="">Suivi de commande</a>
+					</li>
+				</div>
+				<div class="footer-little">
+					<h3>Legal</h3>
+					<ul>
+						<li><a href="{{asset('assets/uploads/mentions-legales-Sandraya.pdf')}}" target="_blank">Mention légales</a></li>
+						<li><a href="">CGV</a></li>
+						<li><a href="">RGPD</a></li>
+						<li><a href="">Politique de cookies</a></li>
+						<li><a href="">Condition d'utilisation du site</a></li>
+					</ul>
+				</div>
+				<div class="footer-little">
+					<h3 class="hide">Contact</h3>
+					<ul class="hide">
+						<li>
+							<a href="">Email</a>
+						</li>
+						<li>
+							<a href="">Portable</a>
+						</li>
+						<li>
+							<a href="">Instagram</a>
+						</li>
+						<li>
+							<a href="">TikTok</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<p>2025 Sandraya - creations en point de croix. Tous droits reservée.
+			</p>
+		</footer>
+		<script src="https://kit.fontawesome.com/88c7dae6e1.js" crossorigin="anonymous"></script>
+		<script src="{{asset("assets/js/structure.js")}}"></script>
+		<script src="{{asset('assets/js/stitch-engine.js')}}"></script>
+		<script src="{{asset('assets/js/stitch-letter.js')}}"></script>
+		<script src="{{asset('assets/js/stitch-title.js')}}"></script>
