--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -62,7 +62,7 @@
 					</ul>
 				</div>
 			</div>
-			<p>2025 Sandraya - creations en point de croix. Tous droits reservée.
+			<p class="copyright">2025 Sandraya - creations en point de croix. Tous droits reservée.
 			</p>
 		</footer>
 		<script src="https://kit.fontawesome.com/88c7dae6e1.js" crossorigin="anonymous"></script>
