--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -546,17 +546,16 @@ form button:hover {
 
 .sin img {
     width: 100%;
-    height: 50vh;
 }
 
 .contain {
     display: flex;
     justify-content: center;
     width: 80%;
-    margin: auto;
+    margin: 5% auto;
     gap: 2%;
     position: relative;
-    border: 1px solid;
+    padding-bottom: 20vh;
 }
 
 .sin {
@@ -578,14 +577,20 @@ form button:hover {
 }
 
 .description {
-    width: 100%;
+    width: 70%;
+    margin: auto;
+    text-align: center;
+    background-color: white;
+    box-shadow: 1px 1px 10px #e79ebd;
+    padding: 10px;
+    border-radius: 10px;
 }
 .quantite-select {
     display: flex;
     align-items: center;
     position: absolute;
     bottom: 10%;
-    right: 2%;
+    right: 10%;
 }
 
 .quantite-select input {
@@ -595,7 +600,16 @@ form button:hover {
 .prix-total-display {
     position: absolute;
     bottom: 10%;
-    font-size: 3em;
+    right: 70%;
+    font-weight: bold;
+    background-color: white;
+    box-shadow: 1px 1px 10px #e79ebd;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+#prixUnitaire {
+    font-weight: bold;
 }
 
 /* PAGE PROFIL */
@@ -789,6 +803,35 @@ canvas.stitch-title {
     #form-login, #form-register {
         width: 50%;
     }
+
+    /* Details Produits */
+
+    .contain {
+        flex-direction: column-reverse;
+        padding-bottom: 20vh;
+    }
+
+    .sin {
+        width: 70%;
+        margin: auto;
+    }
+
+    .dest {
+        margin: 5% auto;
+    }
+
+    .description {
+        width: 100%;
+    }
+
+    .quantite-select {
+        bottom: 0;
+        right: 0;
+    }
+
+    .prix-total-display {
+        right: 0;
+    }
 }
 
 /* Media query portable */
@@ -950,6 +993,31 @@ canvas.stitch-title {
     .freccia3, .freccia4 {
         font-size: 3em;
     }
+
+    /* Details produit */
+
+    .contain {
+        padding-bottom: 30vh;
+    }
+
+    .sin {
+        width: 100%;
+    }
+
+    .dest {
+        margin: 5% auto;
+    }
+
+    .description {
+        width: 100%;
+    }
+
+    .quantite-select {
+        bottom: 0;
+        right: 0;
+    }
+
+
 
     /* Formulaire */
 
