image sans watermark

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,10 +11,10 @@
 				<img src="{{asset('assets/uploads/carosello.png')}}" alt="">
 			</div>
 			<div class="exa">
-				<img src="{{asset('assets/uploads/strada.png')}}" alt="">
+				<img src="{{asset('assets/uploads/strada.jpeg')}}" alt="">
 			</div>
 			<div class="exa">
-				<img src="{{asset('assets/uploads/venditaCasa.png')}}" alt="">
+				<img src="{{asset('assets/uploads/venditaCasa.jpeg')}}" alt="">
 			</div>
 			<div class="exa">
 				<img src="{{asset('assets/uploads/mercatino.png')}}" alt="">
