--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,10 +1,10 @@
 <footer>
-	<div class="footer">
-		<div class="footer-little">
+		<div class="footer-big">
 			<img src="{{asset('assets/uploads/logofina.svg')}}" alt="Logo Sandraya">
 			<p>L’univers unique de l’artisanat créatif où la tradition rencontre l’originalité. Chaque création est réalisée avec soin et passion, alliant la finesse du travail à point de croix à la modernité et la durabilité de la résine.
 			</p>
 		</div>
+	<div class="footer">
 		<div class="footer-little">
 			<h3>Boutique</h3>
 			<ul>
@@ -19,7 +19,7 @@
 				</li>
 			</div>
 			<div class="footer-little">
-				<h3>Aide & Support</h3>
+				<h3>Support</h3>
 				<ul>
 					<li>
 						<a href="">FAQ</a>
