--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -114,7 +114,7 @@ button:hover {
 .show {
     position: absolute;
     right: 0;
-    top: 5vh;
+    top: 100%;
     background-color: #ccb089;
     padding: 20px;
     border-radius: 0 0 0 20px;
@@ -132,7 +132,7 @@ button:hover {
 .showPanier {
     position: fixed;
     right: 0;
-    top: 5vh;
+    top: 7vh;
     background-color: #fff;
     box-shadow: -5px 5px 10px #e79ebd;
     padding: 20px;
@@ -303,10 +303,19 @@ footer p {
     text-align: center;
 }
 
-.footer-little img {
-    width: 80%;
+.footer-big {
+    text-align: center;
+    margin: 5% 0 10% 0;
 }
 
+.footer-big p {
+    width: 50%;
+    margin: auto;
+}
+
+.footer-big img {
+    width: 100%;
+}
 .hide {
     position: relative;
     z-index: 1;
@@ -695,7 +704,7 @@ canvas.stitch-title {
 
 .hamburger-menu {
     position: absolute;
-    top: 5vh;
+    top: 100%;
     left: 0;
     background-color: #ccb089;
     padding: 10px;
@@ -721,6 +730,26 @@ canvas.stitch-title {
 .hamburger-menu a {
     text-decoration: none;
     color: #000;
+    position: relative;
+}
+
+.hamburger-menu a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    width: 100%;
+    background-color: #1a2e25;
+
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.7s ease-in-out;
+}
+
+.hamburger-menu a:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
 }
 
 .hamburger-menu.open {
@@ -754,28 +783,76 @@ canvas.stitch-title {
     }
 }
 
+/* Media query desktop */
 
-/* Media query portable */
+@media (max-with: 1024px) {
+
+}
+
+
+/* Media query tablet */
+
 @media (max-width: 768px) {
     /* Header */
 
     .navBar {
         display: none;
     }
+
+    .titre {
+        margin-top: 10%;
+    }
     #hamburger {
         display: block;
     }
 
     .show {
-        width: 30%;
-        top: 5vh;
+        width: 40%;
+    }
+
+    .showPanier {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 90vh;
+        font-size: 0.8em;
     }
 
     /* Footer */
 
     .footer {
+        flex-direction: column;
+        padding-bottom: 5%;
         font-size: 0.8em;
     }
+
+    .footer div {
+        width: 100%;
+    }
+
+    footer ul {
+        margin-top: 10px;
+        display: none;
+    }
+
+    .copyright {
+        padding-bottom: 5%;
+        font-size: 0.8em;
+    }
+
+    .footer-little h3::after {
+        content: "+";
+        transition: transform 0.3s;
+    }
+
+    .footer-little.active h3::after {
+        content: "-";
+    }
+
+    .footer-little.active ul {
+        display: block;
+    }
+
 
     /* Accueil */
     .exa {
@@ -889,16 +966,7 @@ canvas.stitch-title {
 
     /* Header */
     .show {
-        top: 5vh;
         width: 50%;
-    }
-
-    .showPanier {
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 90vh;
-        font-size: 0.8em;
     }
 
     .imgPanier img {
@@ -919,7 +987,7 @@ canvas.stitch-title {
     }
 
     .titre {
-        margin-top: 7vh;
+        margin-top: 12%;
     }
 
     .titre :nth-child(3) {
@@ -939,42 +1007,7 @@ canvas.stitch-title {
 
     /* Footer  */
 
-    .footer {
-        flex-direction: column;
-        padding-bottom: 5%;
-        font-size: 0.8em;
-    }
-
-    .footer div {
-        width: 100%;
-    }
-
-    footer ul {
-        margin-top: 10px;
-        display: none;
-    }
-
-    .copyright {
-        padding-bottom: 5%;
-        font-size: 0.8em;
-    }
-
-    .footer-little h3::after {
-        content: "+";
-        transition: transform 0.3s;
-    }
-
-    .footer-little.active h3::after {
-        content: "-";
-    }
-
-    .footer-little.active ul {
-        display: block;
-    }
-
-    .footer-little:nth-child(2) {
-        margin-top: 50px;
-    }
+    
 
     
 
