--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -44,6 +44,7 @@ button:hover {
     position: relative;
     margin-top: 5%;
     z-index: -1;
+    
 }
 .titre :nth-child(3) {
     position: absolute;
@@ -314,7 +315,7 @@ footer p {
 }
 
 .footer-big img {
-    width: 100%;
+    width: 40%;
 }
 .hide {
     position: relative;
@@ -853,6 +854,9 @@ canvas.stitch-title {
         display: block;
     }
 
+    .footer-big img {
+        width: 80%;
+    }
 
     /* Accueil */
     .exa {
