--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -522,9 +522,6 @@ form button:hover {
     left: 30%;
 }
 
-.img {
-    transition: all 2s ease-in-out;
-}
 
 .cornice {
     position: absolute;
@@ -1036,7 +1033,11 @@ canvas.stitch-title {
 
     .carte {
         min-width: 100%;
-        height: 40vh;
+        height: 55vh;
+    }
+
+    .collection {
+        height: 55vh;
     }
 
     .cornice {
